[package]
name = "tokiopool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tokiopool"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }
tokio = { version = "1.38.0", features = ["full"] }
